# code-practice

./: .gitignore  _test_paper.cpp  _test_paper.py  package-lock.json
.old/template/: c_1.cpp  c_3.cpp  py_1.py  test_example
algorithm/: graph.py  my_math.py
bash/: sum.sh  test_yes.sh
contest/: A.py  B.py  C.py  D.py  E.py  F.py  _example  at_ABC160F.py  at_sort.py  cf_1326f2.py
cpp/: .clang-format  bar.cpp  example.cpp  f.cpp  foo.cpp  hhh.csv  hhh.py  my_tools.cpp  tempCodeRunnerFile.cpp  test_paper.cpp
go/: go.mod  go.sum  main.go
hello-rust/: Cargo.toml
hello-rust/src/: collections.rs  lib.rs  main.rs
http/crawler/: enhance_effeciency.py  web_csv.py
javaScirpt/: index.html  main.js
javaScript/: evil_ball.js  foo.js  index.html  main.js  my_collection.js  package-lock.json  test.js  worker.js
js/: util.js
md/: gantt.md
minigrep/: Cargo.toml
misc/: 24point.py  my_math.py  my_tools.cpp  py_call.cpp
my_collections/: bsearch.py  bstree.py  fenwicktree.py  segtree.py  sorting.py  stream.py  sudoku.py
practice/: f.cpp  practice.cpp
py/misc/: dag.py  (+11 more)
python/: draft.py  foo.py
rs/hello-tide/: Cargo.toml
rust-ds/: Cargo.toml
rust/data-structure/: Cargo.toml
rust/data-structure/src/: bitree.rs  dsu.rs  lib.rs
rust/my_collection/: Cargo.toml
rust/my_collection/src/: rbtree.rs  skip_list.rs  splay_tree.rs  treap.rs
sh/: sum.sh  test.sh  test_yes.sh  v2en.sh
template/: c_2.cpp  py_2.py  py_3.py
try_cpp/: example.cpp  f.cpp  try.java
try_http/: send_email.py
try_pyqt/: draft.py  networkConnect.py  qtGui.py
try_tex/: draft.tex
(+52 files in other folders)
