[package]
name = "hello-tide"
version = "0.1.0"
authors = ["Lee <lihuaru617@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.15.0"
urlencoding = "1.1.1"

[dependencies.async-std]
version = "1.0.0"
features = ["attributes"]
