[package]
authors = ["Lee <lihuaru617@outlook.com>"]
edition = "2018"
name = "rust_ds"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.0"
crossbeam-channel = "0.5"
error-chain = "0.12.4"
lazy_static = "1.4.0"
my_macro = {path = "../my_macro/"}
rand = "0.6.0"
log = "0.4.13"
env_logger = "0.8.2"