[package]
authors = ["Lee <lihuaru617@outlook.com>"]
edition = "2018"
name = "my_collection"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.2"
ndarray = "0.14.0"
num = "0.3.1"
async-std = "1.9.0"
surf = "2.1.0"
